# FSOFT_PL6

SchoolApplication/: CMakeLists.txt  main.cpp
SchoolApplication/headers/: Grade.h  Person.h  Professor.h  SchoolApplicationUI.h  Student.h
SchoolApplication/sources/: Grade.cpp  Person.cpp  Professor.cpp  SchoolApplicationUI.cpp  Student.cpp
SchoolApplicationTester/: CMakeLists.txt  main.cpp
SchoolApplicationTester/tests/: test_grade.cpp  test_professor.cpp  test_student.cpp
